# crabgraph

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.fuzz  LICENSE-MIT  README.md  SECURITY.md  TODOs.md  docker-compose.fuzz.yml  help.html  rustfmt.toml  settings.html  src-files.js
.cargo/: config.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: benchmark.yml.disabled  ci.yml  docs.yml  fuzz.yml  release.yml
algo-test/: STARIA_SPECIFICATION.md
algo-test/fast_lanes/: bench.rs  mod.rs
algo-test/fast_lanes_improved/: BENCHMARK_ANDROID_EXYNOS.md  BENCHMARK_COMPARISON.md  README.md  bench.rs  bench_compare.rs  mod.rs  tests.rs
benches/: BENCHMARKS.md  README.md  aead_bench.rs  bench_utils.rs  comparison_bench.rs  kdf_bench.rs  key_wrap_bench.rs  signing_bench.rs  stream_bench.rs
crabgraph/: all.html  constant.VERSION.html  index.html  sidebar-items.js
crabgraph/aead/: index.html  struct.Ciphertext.html
crabgraph/aead/aead_trait/: index.html  trait.CrabAead.html
crabgraph/aead/aes_gcm/: index.html  struct.AesGcm128.html  struct.AesGcm256.html
crabgraph/asym/: index.html  sidebar-items.js
crabgraph/encoding/: fn.base64_decode.html  fn.base64_encode.html  fn.base64_url_decode.html  fn.base64_url_encode.html  fn.hex_decode.html  fn.hex_encode.html  index.html
crabgraph/errors/: enum.CrabError.html  index.html  type.CrabResult.html
crabgraph/hash/: fn.blake2b_512.html  fn.blake2b_512_hex.html  fn.blake2s_256.html  fn.blake2s_256_hex.html  fn.blake3_hash.html  fn.blake3_hasher.html  fn.blake3_hex.html  fn.sha256.html  fn.sha256_hex.html  fn.sha384.html  fn.sha384_hex.html  fn.sha3_256.html  fn.sha3_256_hex.html  fn.sha3_512.html  fn.sha3_512_hex.html  fn.sha512.html  fn.sha512_hex.html  index.html  sidebar-items.js  type.Blake2b512Digest.html  type.Blake2s256Digest.html  type.Blake3Digest.html  type.Sha256Digest.html  type.Sha384Digest.html  type.Sha3_256Digest.html  type.Sha3_512Digest.html  type.Sha512Digest.html
crabgraph/kdf/: index.html
crabgraph/key_rotation/: index.html  struct.KeyRotationManager.html  struct.VersionedKey.html  trait.RotatableAead.html
crabgraph/kw/: index.html  struct.Kw128.html  struct.Kw192.html  struct.Kw256.html
crabgraph/mac/: fn.hmac_sha256.html  fn.hmac_sha256_verify.html  fn.hmac_sha512.html  fn.hmac_sha512_verify.html  index.html  type.HmacSha256.html  type.HmacSha512.html  type.HmacTag256.html  type.HmacTag512.html
crabgraph/prelude/: index.html
crabgraph/rand/: fn.fill_secure_bytes.html  fn.generate_key_128.html  fn.generate_key_256.html  fn.secure_bytes.html  index.html
crabgraph/secrets/: index.html  struct.SecretArray.html  struct.SecretVec.html
crabgraph/tls/: fn.install_default.html  fn.provider.html  fn.try_install_default.html  index.html  static.ALL_CIPHER_SUITES.html  static.ALL_KX_GROUPS.html  static.TLS12_CIPHER_SUITES.html  static.TLS13_AES_128_GCM_SHA256.html  static.TLS13_AES_256_GCM_SHA384.html  static.TLS13_CHACHA20_POLY1305_SHA256.html  static.TLS13_CIPHER_SUITES.html  static.TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256.html  static.TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384.html  static.TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256.html  static.TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256.html  static.TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384.html  static.TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256.html  struct.SECP256R1.html  struct.SECP384R1.html  struct.X25519.html
crabgraph/utils/: fn.constant_time_eq.html  index.html
docs/: CONSTANT_TIME_AUDIT.md  EXTENDED_HASHES_IMPLEMENTATION.md  MIGRATE_CRYPTOJS.md
examples/: aead_example.rs  extended_hashes_example.rs  interop_with_cryptojs.rs  key_derivation.rs  key_rotation_example.rs  key_wrapping_example.rs  pkcs8_example.rs  rsa_example.rs  serde_example.rs  stream_example.rs
fuzz/: Cargo.toml  DOCKER_FUZZING.md  README.md
fuzz/fuzz_targets/: aead_fuzz.rs  ed25519_fuzz.rs  encoding_fuzz.rs  hash_fuzz.rs  kdf_fuzz.rs  key_wrap_fuzz.rs  mac_fuzz.rs  stream_fuzz.rs  x25519_fuzz.rs
scripts/: organize_benchmarks.sh
search.index/: 012f1e4f3605.js  01f52208373d.js  021f52bf3dfa.js  034100d9afcf.js  055a2722785d.js  061f25a35953.js  072ddf02147a.js  078e6fe2d8bc.js  08406ea67196.js  086b3e8c3090.js  08e33a86aa03.js  09d0946c05be.js  0a7496dc23f1.js  0aa38a86f498.js  0b873a435003.js  0cad33a0393a.js  0d213a58e520.js  0dfcc9bfc606.js  0fa0ee9c22a4.js  10427ef09373.js  10f5e139f153.js  1151cec7fbb7.js  1264b332f57f.js  12aa3b175258.js  12b526c120e0.js  12e3b4b4f062.js  12e49ddb20ee.js  12efd770a122.js  13765989a4e8.js  14ed299899e7.js  15826fd888af.js  15d405129429.js  15da99407bd4.js  16ec27924727.js  16f902ad9c7a.js  18872b3fc1ef.js  19131c97624f.js  1b191bdc00b3.js  1b7d60209a3b.js  1ca9f36c8154.js  (+156 more)
search.index/desc/: 28a073c7b281.js  f824f7e73b21.js
search.index/entry/: 0000d1ba2b1c.js  ff13f5be04f2.js
search.index/function/: c53d30d8041d.js  df0f4ad2acd2.js
search.index/generic_inverted_index/: 3c91b7c87d34.js  819a0e14965f.js
search.index/name/: 26ca5a34aeba.js  fe2ebf576399.js
search.index/normalizedName/: a848be2af5d3.js  c1f166a11c89.js
search.index/path/: 872e48f27ab9.js
search.index/type/: 3cee12c6ffb8.js  aeb77ab4016a.js
src/: diagnostics.rs  errors.rs  lib.rs
src/aead/: aead_trait.rs  aes_gcm.rs  chacha20poly1305.rs  mod.rs  stream.rs
src/asym/: ed25519.rs  mod.rs  p256.rs  p384.rs  rsa.rs  x25519.rs
src/crabgraph/: errors.rs.html  lib.rs.html
src/encoding/: mod.rs
src/hash/: mod.rs
src/kdf/: argon2.rs  hkdf.rs  mod.rs  pbkdf2.rs
src/key_rotation/: mod.rs
src/kw/: mod.rs
src/mac/: mod.rs
src/rand/: mod.rs
src/secrets/: mod.rs
src/tls/: aead.rs  hash.rs  hmac.rs  key_provider.rs  kx.rs  mod.rs  random.rs  signature.rs  ticketer.rs  tls12.rs  tls13.rs
src/utils/: mod.rs
tests/: diagnostics_test.rs  integration.rs  interop_js.rs  proptest.rs  rfc_vectors.rs  tls_provider.rs
trait.impl/aead/: trait.Buffer.js
trait.impl/rustls_pki_types/: trait.SignatureVerificationAlgorithm.js
trait.impl/zeroize/: trait.Zeroize.js
type.impl/std/: primitive.array.js
(+269 files in other folders)
