[package]
name = "crabgraph"
version = "0.3.3"
authors = ["Raj Sarkar <ariajsarkar@gmail.com>"]
edition = "2021"
rust-version = "1.70"
description = "A safe, ergonomic, high-performance cryptographic library for Rust built on audited primitives"
readme = "README.md"
homepage = "https://github.com/AriajSarkar/crabgraph"
repository = "https://github.com/AriajSarkar/crabgraph"
documentation = "https://docs.rs/crabgraph"
license = "MIT OR Apache-2.0"
keywords = ["cryptography", "crypto", "encryption", "security", "authentication"]
categories = ["cryptography", "authentication", "encoding", "no-std"]
exclude = [
    ".github/",
    ".gitignore",
    "fuzz/",
    "target/",
    "TODOs.md",
    "rustfmt.toml",
    "Cargo.lock",
    "docs/",
]

[dependencies]
# AEAD ciphers - RustCrypto audited implementations
aes-gcm = { version = "0.10.3", features = ["aes", "std", "stream"] }
chacha20poly1305 = { version = "0.10.1", features = ["std", "stream"] }

# Key wrapping
aes-kw = "0.2.1"

# Key derivation functions
pbkdf2 = { version = "0.12.2", features = ["simple"] }
argon2 = { version = "0.5.3", features = ["std"] }
hkdf = "0.12.4"

# Hashing algorithms
sha2 = { version = "0.10.9", features = ["oid"] }
sha3 = { version = "0.10.8", optional = true }
blake2 = { version = "0.10.6", optional = true }
blake3 = { version = "1.8.2", optional = true }

# Message Authentication Codes
hmac = "0.12.1"

# Asymmetric cryptography
ed25519-dalek = { version = "2.2", features = ["rand_core", "pkcs8", "pem"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rsa = { version = "0.9.8", optional = true, features = ["sha2"] }
pkcs8 = { version = "0.10.2", features = ["pem", "alloc"] }

# Random number generation
getrandom = "0.3.4"
rand_core = "0.6.4"  # Used for OsRng in asymmetric crypto modules

# Secure memory handling
zeroize = { version = "1.8.2", features = ["derive"] }

# Constant-time operations
subtle = { version = "2.6.1", default-features = false }

# Encoding utilities
base64 = "0.22.1"
hex = "0.4.3"

# Error handling
thiserror = "1.0.69"

# Serialization (optional)
serde = { version = "1.0.228", features = ["derive"], optional = true }

# Zero-copy optimizations (optional)
bytes = { version = "1.11.0", optional = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
proptest = "1.9.0"
quickcheck = "1.0.3"
hex-literal = "1.1.0"
serde_json = "1.0.145"
bincode = "1.3.3"
toml = "0.8.23"
serde_bytes = "0.11.19"
ring = "0.17"
openssl = { version = "0.10", features = ["vendored"] }

# WASM-specific: Enable WASM support for both getrandom versions
# - getrandom 0.2.x (transitive via rand_core 0.6 from ed25519-dalek/x25519-dalek) needs `js`
# - getrandom 0.3.x (our direct dependency) needs `wasm_js`
# Both versions will be used simultaneously, each with their respective features
# 
# ⚠️ KNOWN ISSUE (v0.3.3): WASM builds currently fail due to Cargo's unified feature resolution
# Cannot enable different features for different versions of the same crate.
# Will be fixed when upgrading to ed25519-dalek 3.0 / x25519-dalek 3.0 (requires Rust 1.81+)
# For WASM support, use CrabGraph v0.3.2 or earlier.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[features]
default = ["std"]
std = ["aes-gcm/std", "chacha20poly1305/std", "argon2/std"]
alloc = ["aes-gcm/alloc", "chacha20poly1305/alloc"]
no_std = []
extended-hashes = ["sha3", "blake2", "blake3"]
rsa-support = ["rsa"]
serde-support = ["serde"]
zero-copy = ["bytes"]
# WASM support is automatic via target-specific getrandom dependency
wasm = []

# SIMD support (AES-NI for x86/x86_64)
# Note: ChaCha20 SIMD is enabled via RUSTFLAGS (e.g. -C target-feature=+avx2)
simd = ["aes-gcm/aes"]

[[example]]
name = "rsa_example"
required-features = ["rsa-support"]

[[example]]
name = "serde_example"
required-features = ["serde-support"]

[[example]]
name = "extended_hashes_example"
required-features = ["extended-hashes"]

[[bench]]
name = "aead_bench"
harness = false

[[bench]]
name = "kdf_bench"
harness = false

[[bench]]
name = "signing_bench"
harness = false

[[bench]]
name = "stream_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false

[[bench]]
name = "key_wrap_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "fast_lanes"
path = "algo-test/fast_lanes/bench.rs"
harness = false

[[bench]]
name = "fast_lanes_improved"
path = "algo-test/fast_lanes_improved/bench.rs"
harness = false

[[bench]]
name = "fast_lanes_compare"
path = "algo-test/fast_lanes_improved/bench_compare.rs"
harness = false




